# SimpleCA

./: .gitignore  claude.md  vercel.json
backend/: pyproject.toml
backend/app/: agent.py  auth.py  config.py  database.py  google_oauth.py  interpreter_agent.py  ledger.py  main.py  schemas.py
backend/prompts/: transaction_interpreter.md
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/balance-sheet/: page.tsx
frontend/src/app/general-ledger/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/profit-loss/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AccountSettingsForm.tsx  ChatWindow.tsx  ErrorNotice.tsx  JournalEntryForm.tsx  LoginForm.tsx  Nav.tsx  OnboardingForm.tsx  RegisterForm.tsx
frontend/src/lib/: actions.ts  api.ts  onboarding.ts  types.ts
prompts/: accounting_expert.md  transaction_interpreter.md
